# seed-creative-swarm

./: README.md  pyproject.toml
seed_swarm/: __init__.py
ten-forward/2026-05-04/: shell-model-creative.md
tests/: test_swarm.py
